tests/builder/default-missing.stderr
error[E0277]: the trait bound `NonDefault: Default` is not satisfied
 --> tests/builder/default-missing.rs:5:10
  |
5 | #[derive(Builder)]
  |          ^^^^^^^ the trait `Default` is not implemented for `NonDefault`
  |
note: required by a bound in `Option::<T>::unwrap_or_default`
 --> $RUST/core/src/option.rs
  |
  |     pub fn unwrap_or_default(self) -> T
  |            ----------------- required by a bound in this associated function
  |     where
  |         T: Default,
  |            ^^^^^^^ required by this bound in `Option::<T>::unwrap_or_default`
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NonDefault` with `#[derive(Default)]`
  |
3    + #[derive(Default)]
4    | pub struct NonDefault {}
     |
